--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <main id="main">
         <div class="photographer_section"></div>
     </main>
-    <script src="scripts/templates/photographer.js"></script>
-    <script src="scripts/pages/index.js"></script>
+    <script src="/scripts/services/getData.js"></script>
+    <script src="scripts/pages/home.js"></script>
+    <script src="scripts/templates/homeContent.js"></script>
   </body>
 </html>
