--- a/photographer.html
+++ b/photographer.html
@@ -13,7 +13,7 @@
     </header>
     <main id="main">
       <div class="photograph-header">
-        <button class="contact_button header-button" onclick="displayModal()">Contactez-moi</button>
+        <!-- <button class="contact_button header-button" onclick="displayModal()">Contactez-moi</button> -->
       </div>
     </main>
     <div id="contact_modal">
@@ -31,8 +31,9 @@
 				</form>
 			</div>
 		</div>
-    <script src="/scripts/templates/photographerContent.js"></script>
+    <script src="/scripts/services/getData.js"></script>
     <script src="/scripts/pages/photographerPage.js"></script>
+    <script src="/scripts/templates/photographerContent.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
   </body>
 </html>
