section-card-element : tri des images par l'id et envoie dans cardContainer -> manque css

--- a/photographer.html
+++ b/photographer.html
@@ -15,6 +15,7 @@
       <div class="photograph-header">
         <!-- <button class="contact_button header-button" onclick="displayModal()">Contactez-moi</button> -->
       </div>
+      <section class="section-element"></section>
     </main>
     <div id="contact_modal">
 			<div class="modal">
