accessibilité élément (en cours)

--- a/photographer.html
+++ b/photographer.html
@@ -22,7 +22,8 @@
 				<header>
           <div class="header-modal">
             <h2>Contactez-moi</h2>
-            <img src="assets/icons/close.svg" id="close-modal" onclick="closeModal()"/>
+            <span tabindex="0" role="button" class="close-modal" aria-label="Fermer"><img src="assets/icons/close.svg" id="close-modal"/></span>
+            
           </div>
           <div class="header-contact-name">
             <h3 class="name-photograph"></h3>
