--- a/photographer.html
+++ b/photographer.html
@@ -9,12 +9,10 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="assets/images/logo.png" class="logo" /></a>
+      <a href="index.html"><img src="assets/images/logo.png" class="logo" /></a> <!-- tabindex="0"-->
     </header>
     <main id="main">
-      <div class="photograph-header">
-        <!-- <button class="contact_button header-button" onclick="displayModal()">Contactez-moi</button> -->
-      </div>
+      <div class="photograph-header"></div>
       <section class="section-element"></section>
     </main>
     <div id="contact-modal">
